traversal.snake.Snake.scala.error
Compilation error:
Snake:2: error: not found: value setCouleurBrossse
  setCouleurBrossse(Color.red)
  ^Snake:17: error: value est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.est){
                                  ^Snake:25: error: value ouest is not a member of object plm.universe.Direction
    }else if (getDirection()==Direction.ouest){
                                        ^